Bump datalevin to fix issues in prod